syntax = "proto3";

option csharp_namespace = "VolumeVaultInfra.Book.Search";

import "google/protobuf/empty.proto";

package search;

service Search {
    rpc SearchBook(stream SearchRequest) returns (stream GrpcBookSearchModel);
}

message SearchRequest {
    string userId = 1;
    string query = 2;
    int32 limitPerSection = 3;
}

message GrpcBookSearchModel {
    int32 id = 1;
    string title = 2;
    string author = 3;
    string isbn = 4;
    optional int32 publicationYear = 5;
    optional string publisher = 6;
    optional int32 edition = 7;
    optional int32 pagesNumber = 8;
    repeated string genre = 9;
    optional BookFormat format = 10;
    optional ReadStatus readStatus = 11;
    optional Date readStartDay = 12;
    optional Date readEndDay = 13;
    repeated string tags = 14;
    Date createdAt = 15;
    Date lastModification = 16;
    string ownerId = 17;
}

enum BookFormat { 
    HARDCOVER = 0;
    HARDBACK = 1;
    PAPERBACK = 2;
    EBOOK = 3;
}
enum ReadStatus
{
    NOT_READ = 0;
    READING = 1;
    HAS_READED = 2;
}

message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}